Estilos realizados a un 80%

--- a/index.html
+++ b/index.html
@@ -6,13 +6,16 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="./css//styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;700;900&display=swap" rel="stylesheet">
   <title> Order summary card</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
  
 </head>
 <body>
-<article>
+<article class="payment-card">
   <header>
     <img src="./images/illustration-hero.svg" alt="Hero de niña escuchando musica">
 
@@ -34,11 +37,12 @@
       </div>
       
     </section>
+  </main>
     <section>
       <button>Proceed to Payment</button>
       <button>Cancel Order</button>   
     </section>
-  </main>
+ 
 
   </article>
    
