diseño mobile completado

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div>
         <img src="./images/icon-music.svg" alt="">
       </div>
-      <div>
+      <div class ="plan_type-plan">
         <span>Annual Plan</span>
         <span>$59.99/year</span>
       </div>
@@ -38,9 +38,9 @@
       
     </section>
   </main>
-    <section>
-      <button>Proceed to Payment</button>
-      <button>Cancel Order</button>   
+    <section class ="button-container">
+      <button class ="button-container_payment">Proceed to Payment</button>
+      <button class ="button-container_cancel">Cancel Order</button>   
     </section>
  
 
